--- a/index.html
+++ b/index.html
@@ -2,33 +2,24 @@
 <html lang="pt"
 <head>
     <meta chasert="UTF-8">
-    <meta name="viewport" content="wideth=device-width",initial-scale=1.0">
-    <title> Nome do aluno</title>
+    <title>cidade</title>
 </head>
 <body>
     <header>
-        <h1>Primeira Página web!</h1>
+        <h1>A minha Cidade</h1>
+        <nav>
+            <a href="cidade/index.html">Home</a>
+            <a href="cidade/local.html">localização</a>
+            <a href="cidade/multimedia.html">Multimédio</a>
+            <a href="cidade/info.html">informação</a>
+        </nav>
     </header>
     <main>
-        <p>Eis a minha primeira Página Web!
-        <p>Na unidade curricular de
-        <a href="https://moodle.ensinolusofona.pt/course/view.php?id=11232">
-            Desenvolvimeto de interfaces web 
-</a>
-abordaremos as seguintes tecnologias web &#127760;:
-</p>
-<ul>
-    <li>html</li>
-    <li>CSS</li>
-    <li>javaScript</li>
-    <li>React e Next.js</li>
-   
-</ul>
-<p>Iremos criar soluçoes criativas!</p>
-<img src="image.svg" alt="Desenvolvimeto de Interfaces Web">
+        <h2> A minha cidade</h1>
+        <p>A minha cidade é muito linda!!</p>
     </main>
     <footer> 
-        <p>Universidade lusofona 2025</p>
+        <p>DIW 2025</p>
     </footer>
 </body>
 </html>
