--- a/index.html
+++ b/index.html
@@ -6,20 +6,31 @@
 </head>
 <body>
     <header>
-        <h1>A minha Cidade</h1>
-        <nav>
-            <a href="cidade/index.html">Home</a>
-            <a href="cidade/local.html">localização</a>
-            <a href="cidade/multimedia.html">Multimédio</a>
-            <a href="cidade/info.html">informação</a>
-        </nav>
+        <h1>O meu primeiro site</h1>
+        
     </header>
-    <main>
-        <h2> A minha cidade</h1>
-        <p>A minha cidade é muito linda!!</p>
+    <main> 
+        <p> Eis a minha primeira página web</p>
+        <p>Na unidade Curricular de <a href="Desenvolvimento de Interfaces Web">Desenvolvimento de Interfaces Web</a>
+        abordamos as seguintes tecnologias web
+        </p>
+        <ul>
+            <li>HTML</li>
+            <Li>CSS</Li>
+            <li>javaScript</li>
+            <li>React e Next.js</li>
+        </ul>
+        <p>Iremos criar soluçoes criativas!</p>
+        <nav>
+        <ul>
+            <li><a href="lab1/index.html">lab1</a></li>
+            <li><a href="lab2/index.html">lab2</a></li>
+        </ul>
+        </nav>
+        <img src="image.svg" alt="Desenvolvimento de Interfaces web">
     </main>
     <footer> 
-        <p>DIW 2025</p>
+        <p>Univerdade Lusófona,2025</p>
     </footer>
 </body>
 </html>
