--- a/index.html
+++ b/index.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt"
+<html lang="en">
 <head>
-    <meta chasert="UTF-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cidade</title>
-
 </head>
-<body> 
-   
+
+<body>
     <header>
-        <h1>O meu primeiro site</h1>
-        
-    </header>
-    <main> 
-        <p> Eis a minha primeira página web</p>
-        <p>Na unidade Curricular de <a href="Desenvolvimento de Interfaces Web">Desenvolvimento de Interfaces Web</a>
-        abordamos as seguintes tecnologias web
-        </p>
-        <ul>
-            <li>HTML</li>
-            <Li>CSS</Li>
-            <li>javaScript</li>
-            <li>React e Next.js</li>
-        </ul>
-        <p>Iremos criar soluçoes criativas!</p>
-        <nav>
-        <ul>
-            <li><a href="lab1/index.html">lab1</a></li>
-            <li><a href="lab2/index.html">lab2</a></li>
-        </ul>
-        </nav>
-        <img src="image.svg" alt="Desenvolvimento de Interfaces web">
+        <h1> A minha cidade</h1>
+        <a href="home">home</a>
+        <a href="Localização">Localização</a>
+        <a href="Multimédia">Multimédia</a>
+        <a href="Informação">Informação</a>
+
+    <img src="/minha cidade.jpg" alt="lucerna">
+    <main>
+        <H1>Localização</H1>
+        <P>Lucerna (em alemão, Luzern) é uma das cidades mais encantadoras da Suíça, localizada no coração do país
+             às margens do Lago dos Quatro Cantões (Vierwaldstättersee) e cercada pelos Alpes. Ela combina um cenário natural 
+             impressionante com um centro histórico muito bem preservado e uma atmosfera acolhedora</P>
+             <img src="/Suica-no-Verao-lacustre-Lucerna-atrai-pela-beleza-1-Mapa-Google-Maps-cópia.jpg" alt="localização da cidade de lucerna">
+             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sit dicta voluptatum. Deleniti minima explicabo reprehenderit maxime. Vel, cupiditate. Repellendus repellat dolor natus nesciunt, at dolorum debitis sint sunt molestiae?
+             Ab eius vel impedit tempore fugiat unde doloribus tenetur, alias consequatur nam quae eaque provident nisi aperiam optio accusantium omnis explicabo laboriosam labore, ex quisquam nostrum ea quis maiores. Odio?
+             Harum asperiores at veniam nam animi culpa nihil, ex tenetur explicabo perspiciatis, doloremque sed modi placeat praesentium fuga, maiores in adipisci sequi! Quis vero natus dolore itaque voluptates atque odit.</p>
     </main>
-    <footer> 
-        <p>Univerdade Lusófona,2025</p>
-    </footer>
+    </header>
 </body>
 </html>
