--- a/lab2/local.html
+++ b/lab2/local.html
@@ -23,6 +23,7 @@
              impressionante com um centro histórico muito bem preservado e uma atmosfera acolhedora</P>
              <img src="Suica-no-Verao-lacustre-Lucerna-atrai-pela-beleza-1-Mapa-Google-Maps-cópia.jpg" alt="localização da cidade de lucerna">
              <p>Diw</p>
+             </main>
     </header>
 </body>
 </html>
