--- a/lab2/local.html
+++ b/lab2/local.html
@@ -5,17 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cidade</title>
 </head>
-
+ <style>
+    body {
+        background-color: burlywood;
+    }
+    a{
+        color: yellow;
+        padding: 6px;
+        text-decoration: none;
+        border: 3px solid whitesmoke;
+        width: 500px;
+        border-radius: 25px;
+    }
+ </style>
 <body>
     <header>
         
     <main>
-        
-        <a href="info.html">home</a>
+        <nav> </nav>
+        <a href="home.html">home</a>
         <a href="local.html">Localização</a>
         <a href="multimedia.html">Multimédia</a>
-        <a href="Informação">Informação</a>
+        <a href="info.html">Informação</a>
+        </nav>
+
          <h1>localização</h1>
+
         <p> O Rio de Janeiro é uma das cidades mais famosas do Brasil, conhecida por suas belas 
             praias como Copacabana e Ipanema, o Cristo Redentor no Corcovado,
             o Pão de Açúcar e o animado Carnaval.</P>
