--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt"
+<html lang="pt">
 <head>
-    <meta chasert="UTF-8">
+    <meta charset="UTF-8">
     <title>cidade</title>
 
 </head>
