--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>cidade</title>
 
 </head>
+<style>
+    body {
+        background-color: lightskyblue;
+        
+    }
+    a {
+        color: chocolate;
+    }
+</style>
 <body> 
    
     <header>
@@ -26,10 +35,10 @@
         <nav>
         <ul>
             <li><a href="lab1/index.html">lab1</a></li>
-            <li><a href="lab2/index.html">lab2</a></li>
+            <li><a href="lab2/home.html">lab2</a></li>
         </ul>
         </nav>
-        <img src="image.svg" alt="Desenvolvimento de Interfaces web">
+        <img src="/imagens/image.svg" alt="Desenvolvimento de Interfaces web">
     </main>
     <footer> 
         <p>Univerdade Lusófona,2025</p>
