--- a/lab2/multimedia.html
+++ b/lab2/multimedia.html
@@ -70,10 +70,10 @@
 
                 <h3 id="video">Video</h3>
                 <div>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/iNfEAJVVY10?si=Gir3XkMmHAjNc6D4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-                    clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/HI5Ca1t5Lf4?si=zfrV4VxTgwNmjMpu&amp;controls=0&amp;start=81" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+               referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>Rio de Janeiro</iframe>
                 </div>
-
+              
                 <h3 id="Poesia">Poesia</h3>
                 <div>
                     <p>Na curva da serra, a cidade desperta</p>
