--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt"
+<html lang="pt">
 <head>
-    <meta chasert="UTF-8">
+    <meta charset="UTF-8">
     <title>cidade</title>
 
 </head>
+<style>
+    body {
+        background-color: lightskyblue;
+        
+    }
+    a {
+        color: chocolate;
+    }
+</style>
 <body> 
    
     <header>
@@ -25,11 +34,11 @@
         <p>Iremos criar soluçoes criativas!</p>
         <nav>
         <ul>
-            <li><a href="lab1/index.html">lab1</a></li>
-            <li><a href="lab2/index.html">lab2</a></li>
+            <li><a href="/lab1/index.html">lab1</a></li>
+            <li><a href="/lab2/home.html">lab2</a></li>
         </ul>
         </nav>
-        <img src="image.svg" alt="Desenvolvimento de Interfaces web">
+        <img src="/imagens/image.svg" alt="Desenvolvimento de Interfaces web">
     </main>
     <footer> 
         <p>Univerdade Lusófona,2025</p>
