--- a/lab1/index.html
+++ b/lab1/index.html
@@ -36,6 +36,7 @@
         <ul>
             <li><a href="/lab1/index.html">lab1</a></li>
             <li><a href="/lab2/home.html">lab2</a></li>
+            <li><a href="/lab3/index.html">lab3</a></li>
         </ul>
         </nav>
         <img src="/imagens/image.svg" alt="Desenvolvimento de Interfaces web">
