--- a/lab3/index.html
+++ b/lab3/index.html
@@ -43,7 +43,7 @@ ul{
     <nav>
       <ul>
         <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#projetos">projetos</a></li>
+        <li><a href="projecto.html">projetos</a></li>
         <li><a href="#cadeira">Interfaces Web</a></li>
       </ul>
     </nav>
@@ -52,40 +52,9 @@ ul{
       <p>Sou estudante de Engenharia Informática, uma pessoa muito dedicada e apaixonada por tecnologia. Gosto de aprender coisas novas, 
         enfrentar desafios e aplicar os meus conhecimentos em projetos que façam a diferença.</p>
     </div>
-  </section id="projetos">
-  <h2> Meus projecto </h2>
-  <div class="projecto-container" class="card"></div>
-  <h3> Projecto 1</h3>
-  <p> O meu primeiro projecto com o um site sobre o inicio do meu site</p>
-  <ul>
-    <li>
-      <a href="/lab1/index.html">lab1</a>
-   </li>
-   </ul>
-  <h3>Projecto 2</h3>
-  <p> O meu segundo projecto foi sobre o Desenvolvimento do meu site que no qual falei sobre 
-    uma cidade que já lá estve quando era peauena</p>
-  <ul>
-    <li>
-      <a href="/lab2/home.html">lab2</a>
-   </li>
-   </ul>
-  <h3>Projecto 3</h3>
-  <p> O meu terceiro projecto com o um site sobre o inicio do meu site</p>
-  <ul>
-    <li>
-      <a href="/lab3/index.html">lab3</a>
-   </li>
-   </ul>
-  <section>
-    
   </section>
 
-  <section>
-    
-  </section>
-</main>
-
+  
 <footer>
  
 </footer>
