--- a/lab4/index.html
+++ b/lab4/index.html
@@ -43,7 +43,7 @@
         }
         input{
             padding: 10px 15px;
-            background-color: red;
+            background-color: white;
             color: rgb(12, 12, 12);
             border: none;
             border-radius: 14px;
