--- a/lab5/index.html
+++ b/lab5/index.html
@@ -150,3 +150,7 @@
 
 </body>
 </html>
+
+const botao = document.createElement('button');
+  botao.textContent = 'Adicionar ao carrinho';
+  botao.addEventListener('produto');
