--- a/lab6/index.html
+++ b/lab6/index.html
@@ -8,35 +8,28 @@
 </head>
 <body>
   <header>
-    <h1>Loja</h1> 
+    <h1>Loja</h1>
     <nav>
-      <a href="#produtos">Produtos</a>
+      <a href="#lista-produtos">Produtos</a>
       <a href="#cesto">Cesto</a>
     </nav>
   </header>
 
   <main>
+    
     <section id="produtos">
-      <h2>Selecione os seus produtos</h2>
-      <li id="lista-produtos" class="produtos-container"></li>
+      <h2>Produtos disponíveis</h2>
+      <div id="lista-produtos" class="produtos-container"></div>
     </section>
 
     <section id="cesto">
-      <h2>Cesto de Compras</h2>
-      <ul id="lista-cesto"></ul>
-      <p id="total"></p>
+      <h2>Produtos-Selecionados</h2>
+      <div id="cesto-produtos"></div>
+      <p id="preco-total">Preço total: R$ 0,00</p>
     </section>
-
-    <ul class="lista-produtos">
-      <li class="produtos">
-      <img src="" alt="">
-      </li>
-    </ul>
   </main>
 
   <script type="module" src="produtos.js"></script>
   <script type="module" src="main.js"></script>
 </body>
 </html>
-
-
