--- a/lab5/index.html
+++ b/lab5/index.html
@@ -154,3 +154,8 @@
 const botao = document.createElement('button');
   botao.textContent = 'Adicionar ao carrinho';
   botao.addEventListener('produto');
+
+
+  como que eu removo uma t_sirts usamos o filtar 
+se eue quiser remover um t_sirts como ficaria
+quero que aparecca um reat deste botao
