--- a/lab9/index.html
+++ b/lab9/index.html
@@ -51,15 +51,12 @@
       <div id="cesto-produtos"></div>
       <p id="preco-total">Preço total: € 0,00</p>
     </section>
-
-    <section id="filtros">
-</section>
-
   </main>
 
   <!-- IMPORTANTE: carregar jQuery e o JS -->
+  <script src="main.js" defer></script>
 
-  <script src="main.js"></script>
+  
 
 </body>
 </html>
